--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "eslint": "^8",
